--- a/backend-code-expert/src/main/resources/application.properties
+++ b/backend-code-expert/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=CodeExpert
 
-spring.datasource.url=jdbc:mysql://localhost:3306/code_expert_db
-spring.datasource.username=root
-spring.datasource.password=0000
+# Database Configuration (Uses Environment Variables)
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslMode=VERIFY_IDENTITY&useSSL=true
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+gemini.api.key=${GEMINI_API_KEY}
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=
